--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,37 @@
-html, body{
-    margin: 0;
-    background-color: black;
+html,
+body{
+    margin: 0px;
+    background-color: #2F4F30;
+    color: white;
+}
+span{
+    border: 5px;
+}
+.row {
+    background-color: #2F4F30;
+    color: white;
 }
 
-img{
-    height: 150px;
-    width: 350px;
+.carta {
+    width: 150px;
+    position: relative;
+    left: 100px;
+    margin-left: -75px;
+    /* transform: rotate(15deg); */
+}
+
+.titulo {
+    text-align: center;
+    background-color: black;
+    color: white;
+    padding: 20px;
+    margin-bottom: -10px;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+#computadora-cartas,
+#jugador-cartas {
+    height: 250px;
+    background-color: #2F4F30;
 }
